--- a/config.yml
+++ b/config.yml
@@ -1,98 +1,42 @@
-# 网站配置文件
-site:
-  name: "内衣商城"
-  description: "高质量的内衣，专注舒适与时尚"
-  url: "https://www.example.com"
-  theme: "light"  # 或者 dark, 根据展示风格选择
+<!DOCTYPE html>
+<html lang="zh-cn">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>陈美贤内衣店</title>
+    <link rel="stylesheet" href="style.css"> #了解创建表格后将其填写进去
+    <link rel="stylesheet" href="style copy.css">
+</head>
+<body>
+         #《header》这种包含网站的logo
+         #《nav》放置网站导览或主选单
+         #《main》包含网页的主要内容   
+         #《section》将内容做分类
 
-# 商品分类
-categories:
-  - name: "文胸"
-    id: "1"
-    description: "各种款式的文胸，舒适又时尚"
-    subcategories:
-      - name: "运动文胸"
-        id: "1.1"
-      - name: "无钢圈文胸"
-        id: "1.2"
-      - name: "塑形文胸"
-        id: "1.3"
-  - name: "内裤"
-    id: "2"
-    description: "舒适合身的内裤系列"
-    subcategories:
-      - name: "女士内裤"
-        id: "2.1"
-      - name: "男士内裤"
-        id: "2.2"
-  - name: "睡衣"
-    id: "3"
-    description: "柔软舒适的睡衣，助您享受每一个夜晚"
-  - name: "配件"
-    id: "4"
-    description: "内衣相关配件，如肩带、胸垫等"
-
-# 展示风格
-display:
-  product_image_size: "medium"  # 可选值：small, medium, large
-  show_reviews: true  # 是否展示商品评论
-  sort_options:
-    - "价格"
-    - "销量"
-    - "评分"
-  show_related_products: true  # 是否显示相关产品
-
-# 库存管理
-inventory:
-  stock_management_enabled: true  # 启用库存管理
-  low_stock_threshold: 10  # 库存低于此数量时标记为低库存
-  out_of_stock_action: "不展示"  # 或者 "显示预定"，根据情况选择
-
-# 支付接口配置
-payment_gateways:
-  - name: "支付宝"
-    id: "alipay"
-    enabled: true
-    api_key: "your_api_key_here"
-  - name: "微信支付"
-    id: "wechat"
-    enabled: true
-    api_key: "your_api_key_here"
-  - name: "信用卡支付"
-    id: "credit_card"
-    enabled: true
-    api_key: "your_api_key_here"
-    merchant_id: "your_merchant_id_here"
-  - name: "PayPal"
-    id: "paypal"
-    enabled: false  # 如果暂时不启用，设为false
-
-# 发货配置
-shipping:
-  options:
-    - name: "标准快递"
-      id: "standard"
-      price: 15.00  # 运费
-      estimated_delivery_time: "3-5工作日"
-    - name: "加急快递"
-      id: "express"
-      price: 30.00
-      estimated_delivery_time: "1-2工作日"
-  free_shipping_threshold: 200.00  # 满200元免运费
-
-# SEO配置
-seo:
-  meta_description: "购买高质量内衣，舒适与时尚并存，享受专属购物体验。"
-  meta_keywords:
-    - "内衣"
-    - "文胸"
-    - "睡衣"
-    - "舒适"
-    - "时尚"
-
-# 用户账户设置
-user_account:
-  registration_enabled: true  # 是否允许用户注册
-  email_verification: true  # 是否需要邮箱验证
-  password_min_length: 8  # 密码最小长度
-
+    <section>     
+    <h1>陈美贤内衣店</h1>
+    <ul>
+    <li<a href="#填写网站">最新消息</a></li>
+    <li<a href="#填写网站">产品介绍</a></li>    
+    <li<a href="#填写网站">联系我们</a></li>       
+    </ul>
+    <h2>迫不及待想抢先上架！</h2>
+    <main>
+    <section>
+    <blockquote cite="填写网站">"据说可以让女孩们,<br>实现真正的穿衣自由"</blockquote>
+    <img src="images/image470.png" alt="无痕内衣yaoenglish">
+    <h2>迫不及待想抢先上架！</h2>
+    </section>
+    </main>
+    <p><a hreef="#填写网站">了解更多</a></p>
+    </section>
+    <ol>
+        <li>无痕内衣要点一</li>
+        <li>无痕内裤要点二</li>
+        <li>无痕文胸要点三</li>
+        <li>无痕睡衣要点四</li>
+        <li>无痕泳衣要点五</li>
+    </ol>
+    #《/footer》标注网站的版权信息
+</body>
+</html>
